--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Get dependencies
       run: go get -v -t -d ./...
     - name: Test
-      run: go test ./...
+      run: go test -v ./...
