--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
       uses: actions/checkout@v2
     - name: Get dependencies
       run: go get -v -t -d ./...
-    - name: Test
-      run: go test -v ./...
+    - name: Make for ci ...
+       run: make ci
